--- a/Bichotica2023/Bichotica2023/Views/Tickets/Edit.cshtml
+++ b/Bichotica2023/Bichotica2023/Views/Tickets/Edit.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Bichotica2023.DAL.Entities.Ticket
-
 @{
     ViewData["Title"] = "Edit";
 }
@@ -12,48 +11,20 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TicketID" class="control-label"></label>
-                <input asp-for="TicketID" class="form-control" />
-                <span asp-validation-for="TicketID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UseDate" class="control-label"></label>
-                <input asp-for="UseDate" class="form-control" />
-                <span asp-validation-for="UseDate" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsUsed" /> @Html.DisplayNameFor(model => model.IsUsed)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="EntranceGate" class="control-label"></label>
-                <input asp-for="EntranceGate" class="form-control" />
-                <span asp-validation-for="EntranceGate" class="text-danger"></span>
-            </div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="TicketID" />
+            <input type="hidden" asp-for="CreateDate" />
+            <partial name="../Shared/PartialViews/_Ticket_CreateAndEdit" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
