Update index image CSS.

--- a/Bichotica2023/Bichotica2023/Views/Home/Index.cshtml
+++ b/Bichotica2023/Bichotica2023/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container mt-5">
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1 class="display-4">Concierto de La Bichota</h1>
         <p class="lead">¡Compra tus boletos y únete a la fiesta!</p>
         <a class="btn btn-comprar btn-lg" href="#">Comprar boletos</a>
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card mb-4">
-                <img src="carol2.jpg" class="card-img-top" alt="">
+                <img src="carol2.jpg" class="card-img-top" alt="Artista Especial">
                 <div class="card-body">
                     <h5 class="card-title">Artista Especial</h5>
                     <p class="card-text">¡No te pierdas la actuación especial de...</p>
@@ -20,9 +20,8 @@
                 </div>
             </div>
         </div>
+ 
 
-     
-         
     </div>
 </div>
 
