--- a/Bichotica2023/Bichotica2023/Views/Home/Index.cshtml
+++ b/Bichotica2023/Bichotica2023/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card mb-4">
-                <img src="carol2.jpg" class="card-img-top" alt="Artista Especial">
+                <img src="carol.jpg" class="card-img-top" alt="Artista Especial">
                 <div class="card-body">
                     <h5 class="card-title">Artista Especial</h5>
                     <p class="card-text">¡No te pierdas la actuación especial de...</p>
